@@ -1,3 +1,7 @@
+2005-03-25  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* asteroids.tcl: add exec wish at top
+
 2005-03-08  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* asteroids.tcl: redo bindGameKeys to use virtual events.  Add
